# Auric

./: .env  Cargo.toml  readme.md
src/: main.rs
src/routes/: upload.rs
src/utils/: mod.rs  mongo.rs  random.rs
