[package]
name = "auric"
version = "0.1.0"
authors = ["A Furry Account <ender@thefluegges.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-form-data = "*"
actix-multipart = "*"
futures = "*"
rand = "*"
serde_json = "*"
serde = "*"
anyhow = "*"
bson = "*"
actix-files = "*"
dotenv = "*"
dotenv_codegen = "*"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["async-std-runtime"]